# JobFinder

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.github-actions.md  README.local.md  README.md  job_fit_evaluator.py  job_scraper_config.py  linkedin_job_scraper.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_job_pipeline.py
.github/workflows/: README.md  ci.yml  jobs.yml
configs/: README.md  filters.json
cv/: master_cv.example.tex
prompts/: master_prompt.example.txt
scripts/: README.md  evaluate_jobs.py  run_pipeline.py  scrape_jobs.py
src/jobfinder/: README.md  config_files.py  env.py  google_auth.py  google_config.py  google_drive.py  google_sheets.py  paths.py
src/jobfinder/core/: __init__.py  logging.py
src/jobfinder/dedupe/: README.md  matching.py  merge.py  normalize.py  scoring.py
src/jobfinder/evaluator/: README.md  cli.py  latex.py  models.py  openai_client.py  parsing.py  pdf_output.py  service.py  storage.py
src/jobfinder/integrations/: __init__.py
src/jobfinder/operations/: README.md  reports.py
src/jobfinder/pipeline/: README.md  cli.py  preflight.py  resume.py
tests/: README.md  test_config_files.py  test_cv_pdf_output.py  test_evaluator_cli.py  test_evaluator_openai_client.py  test_evaluator_parsing.py  test_evaluator_storage.py  test_google_sheets.py  test_pipeline_cli.py  test_pipeline_resume.py  test_scraper_normalize.py  test_scraper_run_history.py  test_scraper_search.py  test_scraper_settings.py  test_stepstone_provider.py  test_xing_provider.py
(+29 files in other folders)
