[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfinder"
version = "0.1.0"
description = "Apify-powered job scraping and OpenAI job-fit evaluation pipeline."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1,<4",
    "openai>=1.93,<3",
    "requests>=2.31,<3",
    "tzdata>=2024.1",
    "google-api-python-client>=2.100,<3",
    "google-auth>=2.20,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1.0,<2",
]

[project.scripts]
jobfinder-scrape = "jobfinder.scraper.cli:main"
jobfinder-evaluate = "jobfinder.evaluator.cli:main"
jobfinder-pipeline = "jobfinder.pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
